Fix horizontal scroll

--- a/src/components/showcase/showcase.module.css
+++ b/src/components/showcase/showcase.module.css
@@ -11,7 +11,7 @@
 
 .cards {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(333px, 1fr));
   grid-auto-rows: 1fr;
   gap: 0.75rem;
 }
