--- a/src/components/tech-stack/tech-stack.module.css
+++ b/src/components/tech-stack/tech-stack.module.css
@@ -12,7 +12,7 @@
 
 .cards {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(333px, 1fr));
   gap: 1rem;
 }
 
